src/main/java/com/example/uad/error/ApplicationError.java
package com.example.uad.error;public class ApplicationError {
}
